# dotfiles

./: .ansible-lint-ignore  .commitlintrc.mjs  .gitattributes  .gitignore  .gitmodules  Makefile  Pipfile  README.md  TODO.md  Taskfile.yml  ansible.cfg  bootstrap.yaml  bootstrap.yml  flake.nix  home.nix  install  install_archlinux.yaml  laptar-2.nix  notes.txt  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  requirements.yml
.github/: dependabot.yml
.github/workflows/: python-deps.yaml
.husky/: commit-msg  pre-commit
colors/: decay.yaml  north.yaml
config/alacritty/: alacritty.toml  darwin.toml  debian.toml  nixos.toml
config/bat/: config
config/cursor/: keybindings.json  settings.json
config/direnv/: direnvrc
config/fd/: ignore
config/ghostty/: black-metal-nile  config  darwin.toml  nixos.toml
config/git/: gitconfig
config/kitty/: kitty.conf
config/neovim/: filetype.lua  init.lua  lazy-lock.json
config/pure/: pure.zsh
config/starship/: starship.toml
config/tmux/: darwin.conf  (+3 more)
docs/: install_archlinux.md
machines/: laptar.nix  macarm.nix  proton.nix  woos.nix  yuzu.nix
modules/: alacritty.nix  bat.nix  bun.nix  common.nix  cursor.nix  direnv.nix  fd.nix  firefox.nix  fonts.nix  fzf.nix  ghostty.nix  git.nix  go.nix  kitty.nix  kubernetes.nix  lazygit.nix  neovim.nix  pure.nix  starship.nix  tmux.nix  zoxide.nix  zsh.nix
playbooks/: bootstrap.yaml  install_archlinux.yaml  sync.yaml
resources/: Brewfile  _ggo  _ggr  _status  gitconfig  requirements.txt  tmux.conf  vimrc  zshrc
scripts/: reinstall-arch  setup-vm.sh
(+314 files in other folders)
