[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "ansible-based dotfiles and dev machine setup"
authors = ["j4ns8i <jsmalkowski+github@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = ">=2.16,<3.0"
ansible-lint = { version = "^24.2.1", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
